<resources>
    <string name="app_name">Contacts</string>
    <string name="name_hint">Name</string>
    <string name="phone_hint">Phone</string>
    <string name="area_hint">Area</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_hint">Zip</string>
    <string name="email_hint">Email</string>
    <string name="birthday_hint">Birthday</string>
</resources>