<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh125"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:menu="@menu/top_app_bar"
            app:navigationIcon="@drawable/ic_menu_24px"
            app:title="@string/app_name"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh25"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toTopOf="@id/glh125">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/padding"
        android:paddingRight="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/glh375"
        app:layout_constraintEnd_toStartOf="@id/glv60"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/glh25">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/area_hint"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/glh375"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv60"
        app:layout_constraintTop_toBottomOf="@id/glh25">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/areaField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh50"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/glh375">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addressField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh625"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/glh50">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cityField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/state_hint"
        android:paddingEnd="@dimen/padding"
        android:paddingRight="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/glh75"
        app:layout_constraintEnd_toStartOf="@id/glv525"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/glh625">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
            android:id="@+id/stateField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding"
        android:paddingLeft="@dimen/padding"
        app:layout_constraintBottom_toTopOf="@id/glh75"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv525"
        app:layout_constraintTop_toBottomOf="@id/glh625">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/zipField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zip_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh875"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@id/glh75">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/glv90"
        app:layout_constraintStart_toEndOf="@id/glv15"
        app:layout_constraintTop_toBottomOf="@+id/glh875">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday_hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv525"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".525" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".6" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh25"
        app:layout_constraintEnd_toStartOf="@+id/glv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/glh125"
        app:srcCompat="@drawable/ic_person_black_18dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh375"
        app:layout_constraintEnd_toStartOf="@+id/glv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glh25"
        app:srcCompat="@drawable/ic_local_phone_black_18dp" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh50"
        app:layout_constraintEnd_toStartOf="@+id/glv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glh375"
        app:srcCompat="@drawable/ic_place_24px" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/glh875"
        app:layout_constraintEnd_toStartOf="@+id/glv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glh75"
        app:srcCompat="@drawable/ic_mail_24px" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glv15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glh875"
        app:srcCompat="@drawable/ic_cake_24px" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh125"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".125" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh375"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".375" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh625"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh875"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".875" />
</androidx.constraintlayout.widget.ConstraintLayout>